objects/Signup_Request__c.object
<CustomObject>
    <description>This object captures the Signup Requests generated from the community and creates Trialforce orgs</description>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the community contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Signup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The default value is the country of the requesting org. The language of the trial organization is auto-determined based on the value of this field.</description>
        <inlineHelpText>Default value is the country of the requesting org. ISO-3166 country code (Alpha-2 code).  Full list of these codes at: https://www.iso.org/obp/ui/#search. The language of the trial organization is auto-determined based on this value.</inlineHelpText>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Org_Id__c</fullName>
        <inlineHelpText>The 15–character organization ID of the trial organization created. The system provides this read-only field once the sign-up request has been processed.</inlineHelpText>
        <label>Created Org Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Org_Instance__c</fullName>
        <inlineHelpText>The server instance of the new trial organization, for example, “na8.” This field is available in API version 29.0 and later.</inlineHelpText>
        <label>Created Org Instance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <inlineHelpText>The Salesforce template that is used to create the trial organization.</inlineHelpText>
        <label>Edition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Group</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Professional TSO</fullName>
                </value>
                <value>
                    <fullName>Partner Professional</fullName>
                </value>
                <value>
                    <fullName>Service Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Enterprise TSO</fullName>
                </value>
                <value>
                    <fullName>Partner Enterprise</fullName>
                </value>
                <value>
                    <fullName>Sales Enterprise</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Partner Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <formula>NOW() &gt;= CreatedDate + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playground_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is populated by the Playground Wizard so that ProcessBuilder can update the job and UI changes can be triggered via Playground Job Events.</inlineHelpText>
        <label>Playground Job</label>
        <referenceTo>Playground_Job__c</referenceTo>
        <relationshipLabel>Signup Request</relationshipLabel>
        <relationshipName>Signup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Signup_Request_ID__c</fullName>
        <inlineHelpText>This is the Record ID of the Salesforce Signup Request object. This will be populated once the record is created and and the request is sent to Salesforce.</inlineHelpText>
        <label>SF Signup Request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Source__c</fullName>
        <label>Signup Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSO_Template_ID__c</fullName>
        <formula>TSO_Template__r.Trialforce_Template_Id__c</formula>
        <label>TSO Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSO_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Trialforce Template from which to create the new org.</inlineHelpText>
        <label>TSO Template</label>
        <referenceTo>TSO_Template__c</referenceTo>
        <relationshipLabel>Signup Request</relationshipLabel>
        <relationshipName>Signup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <inlineHelpText>The 15–character ID of the Trialforce template that is the basis for the trial sign-up. Salesforce must approve the template. If you don’t specify an edition, a template ID is required.</inlineHelpText>
        <label>Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>The duration of the trial sign-up in days. Must be equal to or less than the trial days for the approved Trialforce template. If not provided, it defaults to the trial duration specified for the Trialforce template.</inlineHelpText>
        <label>Trial Days</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Signup_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <inlineHelpText>The username of the admin user for the trial sign-up. It must follow the address convention specified in RFC822: www.w3.org/Protocols/rfc822/#z10</inlineHelpText>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Signup Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>SF_Signup_Request_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Created_Org_Id__c</columns>
        <columns>Created_Org_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR{0000000000}</displayFormat>
        <label>Signup Request Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signup Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>